env/local/apps/online-boutique/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: boutique
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: boutique.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-stable
                port: { number: 80 }
